# instantWM

./: .clang-format  .clangd  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT_SUMMARY.md  LICENSE  Makefile  README.md  TODO.md  animation.c  animation.h  bar.c  bar.h  build.rs  build.sh  client.c  client.h  commands.c  commands.h  config.c  config.def.h  config.desktop.h  config.h  config.laptop.h  config.mk  config.toml.example  default.nix  drw.c  drw.h  dwm  dwm.1  dwm.c  events.c  events.h  floating.c  floating.h  (+69 more)
.github/scripts/: prepare-release.py
.github/workflows/: ci.yml  release-plz.yml  release.yml  sync-pkgbuild.yml  version-bump.yml
.jules/: bolt.md
config/: colors.example.toml
coverage/: test.nix
docs/: manual-layout.md  profiling.md
packaging/arch/: PKGBUILD
packaging/arch-bin/: PKGBUILD
packaging/debian/: control  copyright
plans/: abstraction.md  fixes.md  fixownership.md  focus_fix.md  more.md  move.md  optimize.md  rearch.md  rewrite.md  sensibledrag.md  split.md  tidy.md  wayland_ux.md
resources/: instantwm-portals.conf
rust/: Cargo.toml  build.rs  install.sh  instantwm-debug-wrapper.sh  instantwm-wayland-debug.desktop  instantwm-wayland.desktop  instantwm-x11.desktop  migrate.md
rust/plans/: issues.md  more.md
rust/src/: animation.rs  bar.rs  client.rs  commands.rs  config.rs  contexts.rs  drw.rs  events.rs  events.rs.orig  events.rs.patch  events.rs.rej  floating.rs  focus.rs  globals.rs  ipc.rs  ipc_types.rs  keyboard.rs  keyboard_layout.rs  layouts.rs  lib.rs  macros.rs  main.rs  monitor.rs  mouse.rs  overlay.rs  push.rs  scratchpad.rs  systray.rs  tags.rs  toggles.rs  types.rs  util.rs  wayland_systray.rs  wm.rs  xresources.rs
rust/src/backend/: mod.rs  wayland.rs  x11.rs
rust/src/backend/wayland/: compositor.rs  mod.rs
rust/src/backend/wayland/compositor/: focus.rs  handlers.rs  mod.rs  screencopy.rs  state.rs
rust/src/backend/x11/: bar.rs  client.rs  events.rs  lifecycle.rs  mod.rs  mouse.rs
rust/src/bar/: color.rs  model.rs  paint.rs  renderer.rs  status.rs  theme.rs  wayland.rs  widgets.rs  x11.rs  x11_painter.rs
rust/src/client/: focus.rs  fullscreen.rs  geometry.rs  kill.rs  layout_ops.rs  lifecycle.rs  list.rs  manager.rs  mod.rs  state.rs  visibility.rs
rust/src/config/: appearance.rs  buttons.rs  commands.rs  commands_common.rs  config_doc.rs  config_toml.rs  keybind_config.rs  keybindings.rs  keysyms.rs  mod.rs  rules.rs  xcommands.rs
rust/src/constants/: animation.rs  mod.rs  overlay.rs
rust/src/drw/: color.rs  draw.rs  ffi.rs  mod.rs
rust/src/floating/: batch.rs  helpers.rs  mod.rs  movement.rs  snap.rs  state.rs
rust/src/layouts/: manager.rs  mod.rs  query.rs
rust/src/layouts/algo/: fibonacci.rs  float.rs  grid.rs  mod.rs  monocle.rs  overview.rs  stack.rs  tcl.rs  tile.rs
rust/src/mouse/: cursor.rs  drag.rs  grab.rs  hover.rs  mod.rs  monitor.rs  resize.rs  slop.rs  warp.rs
rust/src/startup/: common_wayland.rs  drm.rs  mod.rs  wayland.rs  wayland_bar.rs  wayland_input.rs  x11.rs
rust/src/startup/drm/: gpu.rs  input.rs  mod.rs  render.rs  state.rs
rust/src/startup/wayland/: bar.rs  cursor.rs  init.rs  input.rs  render.rs
rust/src/tags/: bar.rs  client_tags.rs  mod.rs  naming.rs  shift.rs  sticky.rs  tag_mon_impl.rs  tag_ops.rs  view.rs
rust/src/types/: atoms.rs  client.rs  color.rs  commands.rs  geometry.rs  input.rs  monitor.rs  tag.rs  tag_types.rs  window.rs
scripts/: install.sh  instantwm-debug.sh  instantwm-session  instantwm-wayland.sh  profile-capture.sh  profile-gpu.py  profile-report.py  profile-samply.sh  profile-workload.sh  startinstantos
scripts/ci/: determine-release.sh  extract-release-notes.sh  extract-version.sh  install-deps-arch.sh  install-deps-ubuntu.sh  package-binary.sh
src/: actions.rs  animation.rs  bar.rs  cli.rs  commands.rs  compositor.rs  config.rs  contexts.rs  core_state.rs  error.rs  events.rs  focus.rs  frame_clock.rs  geometry.rs  globals.rs  input.rs  ipc.rs  ipc_types.rs  keybindings.rs  keyboard.rs  keyboard_layout.rs  layouts.rs  lib.rs  macros.rs  main.rs  model.rs  monitor.rs  overlay.rs  overview.rs  push.rs  reload.rs  runtime.rs  scratchpad.rs  systray.rs  test_json.rs  toggles.rs  top_bar.rs  types.rs  util.rs  wayland_systray.rs  (+3 more)
src/actions/: dispatch.rs  mod.rs  named.rs
src/backend/: mod.rs
src/bar/: color.rs  model.rs  paint.rs  renderer.rs  scene.rs  status.rs  systray.rs  theme.rs  wayland.rs  widgets.rs  x11.rs  x11_painter.rs
src/client/: constants.rs  focus.rs  fullscreen.rs  geometry.rs  kill.rs  layout_ops.rs  lifecycle.rs  list.rs  manager.rs  mod.rs  mode.rs  rules.rs  state.rs  visibility.rs  x11_policy.rs
src/config/: appearance.rs  buttons.rs  commands.rs  commands_common.rs  config_doc.rs  config_toml.rs  generated_keybinds.rs  keybind_config.rs  keybindings.rs  keysyms.rs  mod.rs  rules.rs
src/constants/: animation.rs
src/core_state/: interactions.rs  keyboard_state.rs
src/drw/: color.rs  draw.rs  ffi.rs  font.rs  mod.rs  utf8.rs
src/floating/: batch.rs  helpers.rs  mod.rs  movement.rs  overlay.rs  scratchpad.rs  snap.rs  state.rs
src/ipc/: config.rs  general.rs  input.rs  keyboard.rs  mod.rs  mode.rs  monitor.rs  scratchpad.rs  tag.rs  test.rs  theme.rs  toggle.rs  window.rs
src/layouts/: keyboard_placement.rs  manager.rs  mod.rs  placement.rs  placement_modal.rs  query.rs  tree.rs
src/mouse/: bindings.rs  constants.rs  context.rs  cursor.rs  drag.rs  grab.rs  hot_corner.rs  hover.rs  mod.rs  monitor.rs  pointer.rs  resize.rs  slop.rs  warp.rs
src/overview/: tests.rs
src/startup/: autostart.rs  common_wayland.rs  default_commands.rs  locale.rs  mod.rs  wayland.rs  x11.rs
src/systray/: mod.rs  render.rs  status_notifier.rs  wayland.rs  x11.rs
src/tags/: bar.rs  (+8 more)
systemd/: instantwm.service
tests/: e2e.sh
tests/wlcs/: Cargo.toml
tests/wlcs/src/: lib.rs
themes/: arc.theme  dracula.theme  mac.theme  manjaro.theme  sunset.theme
utils/: build_deb.sh  instantwm-wayland-debug.desktop  instantwm-wayland.desktop  instantwm-x11.desktop
(+155 files in other folders)
