[workspace]
members = [".", "tests/wlcs"]

[package]
name = "instantwm"
version = "0.1.0"
edition = "2024"
description = "A tiling window manager for X11 - Rust port"
license = "MIT"
authors = ["instantWM contributors"]
keywords = ["window-manager", "x11", "tiling"]
categories = ["gui"]

[dependencies]
x11rb = { version = "0.13", features = ["cursor", "randr", "xinerama", "xinput", "xkb", "shm", "render", "composite", "damage", "dpms", "dri2", "dri3", "glx", "present", "record", "res", "sync", "xf86dri", "xf86vidmode", "xfixes", "xprint", "xselinux", "xtest", "xv", "xvmc", "allow-unsafe-code", "dl-libxcb"] }
libc = "0.2"
fontconfig = "0.8"
freetype = "0.7"
bitflags = "2.4"
thiserror = "2.0"
once_cell = "1.19"
anyhow = "1.0"
log = "0.4"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "2.0"
toml = "1.0"
dirs = "5.0"
xcursor = "0.3"

# Wayland compositor support via Smithay
smithay = { version = "0.7", default-features = false, features = [
    "backend_winit",
    "backend_drm",
    "backend_gbm",
    "backend_gbm_has_fd_for_plane",
    "backend_gbm_has_create_with_modifiers2",
    "backend_egl",
    "backend_libinput",
    "backend_udev",
    "backend_session_libseat",
    "renderer_gl",
    "use_system_lib",
    "wayland_frontend",
    "desktop",
    "xwayland",
] }
calloop = { version = "0.14" }
cosmic-text = { version = "0.12", features = ["shape-run-cache"] }
zbus = { version = "5" }
tokio = { version = "1", features = ["rt", "sync", "macros", "time"] }
serde_json = "1.0"
profiling = "1.0"
tracy-client = { version = "0.18.4", default-features = false }

[build-dependencies]

[patch.crates-io]
# Force calloop 0.14.4 for all transitive dependencies that require 0.13.0
calloop = { git = "https://github.com/Smithay/calloop.git", tag = "v0.14.4" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
wlcs = "0.1"

[features]
profile-with-tracy = ["profiling/profile-with-tracy", "tracy-client/default"]
