[package]
name = "instantwm"
version = "0.1.0"
edition = "2021"
description = "A tiling window manager for X11 - Rust port"
license = "MIT"
authors = ["instantWM contributors"]
keywords = ["window-manager", "x11", "tiling"]
categories = ["gui"]

[dependencies]
x11rb = { version = "0.13", features = ["cursor", "randr", "xinerama", "xinput", "xkb", "shm", "render", "composite", "damage", "dpms", "dri2", "dri3", "glx", "present", "record", "res", "sync", "xf86dri", "xf86vidmode", "xfixes", "xprint", "xselinux", "xtest", "xv", "xvmc", "allow-unsafe-code", "dl-libxcb"] }
libc = "0.2"
fontconfig = "0.8"
freetype = "0.7"
bitflags = "2.4"
thiserror = "1.0"
once_cell = "1.19"
anyhow = "1.0"

[build-dependencies]

[features]
default = ["xinerama"]
xinerama = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
