[package]
name = "instantwm"
version = "0.1.0"
edition = "2021"
description = "A tiling window manager for X11 - Rust port"
license = "MIT"
authors = ["instantWM contributors"]
keywords = ["window-manager", "x11", "tiling"]
categories = ["gui"]

[dependencies]
x11rb = { version = "0.13", features = ["cursor", "randr", "xinerama", "xinput", "xkb", "shm", "render", "composite", "damage", "dpms", "dri2", "dri3", "glx", "present", "record", "res", "sync", "xf86dri", "xf86vidmode", "xfixes", "xprint", "xselinux", "xtest", "xv", "xvmc", "allow-unsafe-code", "dl-libxcb"] }
libc = "0.2"
fontconfig = "0.8"
freetype = "0.7"
bitflags = "2.4"
thiserror = "1.0"
once_cell = "1.19"
anyhow = "1.0"
log = "0.4"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "2.0"
toml = "0.8"
dirs = "5.0"
xcursor = "0.3"

# Wayland compositor support via Smithay
smithay = { version = "0.7", default-features = false, features = [
    "backend_winit",
    "backend_drm",
    "backend_gbm",
    "backend_egl",
    "backend_libinput",
    "backend_udev",
    "backend_session_libseat",
    "renderer_gl",
    "wayland_frontend",
    "desktop",
    "xwayland",
] }
calloop = { version = "0.14" }
cosmic-text = "0.12"

[build-dependencies]



[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
